# sast-ai-service

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
app/: celery_app.py  config.py  cpg.py  loader.py  main.py  relearn.py  schemas.py  storage.py  tasks.py
gnn_vuln/: README.md  __init__.py  config.py  evaluate.py  inference.py  pretrain_jepa.py  train.py  utils.py
gnn_vuln/data/: build_pt.py  dataset_lm.py  graph_builder_lm.py  graph_partition.py  graph_partition_ref.py  merge.py  node_embedder.py  prepare.py
gnn_vuln/data/cpg/: __init__.py  builder.py  constants.py
gnn_vuln/evaluation/: localize.py
gnn_vuln/losses/: hierarchical_supcon.py
gnn_vuln/models/: __init__.py  _lm_utils.py  base.py  cross_task.py  encoders.py  graph_vit.py  heads.py  lmgat_codebert.py  lmgat_codebert_mtl.py  lmgat_dualflow.py  lmgat_hcdfgat.py  lmgat_interp.py  lmgat_mcs.py  lmgat_seq.py  lmgat_seqgnn.py  lmgat_waves_seq.py  registry.py  supcon_head.py
gnn_vuln/training/: ewc.py  losses.py  mtl_balance.py  optimizer.py  sampler.py  trainer.py  unfreezer.py
