[project]
name = "sast-ai-service"
version = "0.1.0"
description = "Standalone AI model service for SAST: release loading, inference, and relearning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0.1",
    "boto3>=1.34",
    "httpx>=0.27.0",
    # ── ML / training stack (vendored gnn_vuln) ──
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "torch-geometric>=2.5.0",
    "networkx>=3.3",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-c>=0.23.0",
    "loguru>=0.7.2",
    "datasets>=4.8.4",
    "transformers>=4.48,<5.0",
    "ijson>=3.5.0",
    "h5py>=3.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "gnn_vuln"]
