[project]
name = "sast-ai-service"
version = "0.1.0"
description = "Standalone AI model service for SAST: release loading, inference, and relearning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0.1",
    "boto3>=1.34",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    # ── model library (published package, no longer vendored). Brings torch / torch-geometric /
    # transformers / etc. transitively. torch + torch-scatter/torch-sparse are pre-installed from
    # their own wheel indexes in the Dockerfile (PyPI alone can't resolve the matching CPU/CUDA
    # wheels), so those transitive deps are already satisfied when this installs. ──
    "gnn-vuln==0.1.16",
    # ── async job queue: long jobs (relearn/train) run in a separate Celery worker + Redis ──
    "celery[redis]>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
